--- a/project/src/main/res/layout/fragment_hotel_filters.xml
+++ b/project/src/main/res/layout/fragment_hotel_filters.xml
@@ -162,20 +162,17 @@
                 <com.expedia.bookings.widget.ImageRadioButton
                     android:id="@+id/rating_low_button"
                     style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_filter_hotels_for_three_or_more_stars"
-                    app:image="@drawable/btn_filter_3star" />
+                    android:contentDescription="@string/cd_filter_hotels_for_three_or_more_stars" />
 
                 <com.expedia.bookings.widget.ImageRadioButton
                     android:id="@+id/rating_medium_button"
                     style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_filter_hotels_for_four_or_more_stars"
-                    app:image="@drawable/btn_filter_4star" />
+                    android:contentDescription="@string/cd_filter_hotels_for_four_or_more_stars" />
 
                 <com.expedia.bookings.widget.ImageRadioButton
                     android:id="@+id/rating_high_button"
                     style="@style/V2.Widget.RadioButton.Filter"
-                    android:contentDescription="@string/cd_filter_hotels_for_five_stars"
-                    app:image="@drawable/btn_filter_5star" />
+                    android:contentDescription="@string/cd_filter_hotels_for_five_stars" />
 
                 <RadioButton
                     android:id="@+id/rating_all_button"
