Fixed initial crash for LastMinute

--- a/project/src/lastMinute/res/values/themes.xml
+++ b/project/src/lastMinute/res/values/themes.xml
@@ -115,6 +115,8 @@
     </style>
 
     <style name="LaunchTheme" parent="Theme.AppCompat">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="android:logo">@drawable/ic_ab_lm_logo</item>
         <item name="actionBarTabStyle">@style/ActionBarTabBar</item>
         <item name="actionBarTabBarStyle">@style/ActionBarTabBar</item>
