--- a/project/src/lastMinute/res/layout/lm_section_phone_launch_lob.xml
+++ b/project/src/lastMinute/res/layout/lm_section_phone_launch_lob.xml
@@ -28,7 +28,7 @@
             android:alpha="0.85"
             android:background="@color/launch_lob_bg" />
 
-        <com.expedia.bookings.widget.LinearLayout
+        <LinearLayout
             android:id="@+id/lob_btn_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
                 app:btn_icon="@drawable/lob_flight"
                 app:btn_text="@string/nav_flights" />
 
-        </com.expedia.bookings.widget.LinearLayout>
+        </LinearLayout>
     </FrameLayout>
 
     <LinearLayout
