--- a/project/src/lastMinute/res/values/colors.xml
+++ b/project/src/lastMinute/res/values/colors.xml
@@ -60,4 +60,12 @@
     <color name="section_flight_edit_traveler_link_color_lm">@color/action_bar_bg_color</color>
     <color name="room_rate_refundable_cancellation_text_color_lm">#599027</color>
     <color name="tablet_hotel_coupon_text_color_lm">@color/action_bar_bg_color</color>
+
+    <!-- Cars and LX -->
+    <color name="cars_primary_color">#E40088</color>
+    <color name="cars_unchecked_toggle_text_color">#B3FFFFFF</color>
+    <color name="lx_primary_color">#E40088</color>
+    <color name="lx_ripple_color">#A1266C</color>
+    <color name="lx_secondary_color_disabled">#A1266C</color>
+    <color name="lx_unchecked_toggle_text_color">@android:color/white</color>
 </resources>
