--- a/project/src/main/res/drawable-v21/cars_toggle_background_selector.xml
+++ b/project/src/main/res/drawable-v21/cars_toggle_background_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#A4638D">
+    android:color="@color/cars_ripple_color">
     <item>
         <selector>
             <item
