--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -235,6 +235,7 @@
     <color name="cars_status_bar_color">#7E4569</color>
     <color name="cars_checkout_text_color">#676767</color>
     <color name="cars_primary_color">#9E4E7F</color>
+    <color name="cars_ripple_color">#A4638D</color>
     <color name="cars_secondary_color">#915B7C</color>
     <color name="cars_tooltip_color">#915B7C</color>
     <color name="cars_tooltip_disabled_color">#9D9D9D</color>
@@ -259,6 +260,7 @@
 
     <!-- LX colors -->
     <color name="lx_primary_color">#E88534</color>
+    <color name="lx_ripple_color">#F7840D</color>
     <color name="lx_valid_days_calendar">#3A3A3A</color>
     <color name="lx_invalid_days_calendar">#A9A9A9</color>
     <color name="lx_search_result_info_text_color">#888888</color>
