Hotel reviews materials

--- a/project/src/main/res/layout/activity_hotel.xml
+++ b/project/src/main/res/layout/activity_hotel.xml
@@ -37,4 +37,9 @@
         android:layout_height="match_parent"
         android:visibility="gone"/>
 
+    <com.expedia.bookings.presenter.hotel.HotelReviewsPresenter
+        android:id="@+id/hotel_reviews_presenter"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 </com.expedia.bookings.presenter.hotel.HotelPresenter>
