--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -7,9 +7,9 @@
         android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="9dp"
         android:layout_marginLeft="@dimen/hotel_room_list_container_margin"
         android:layout_marginRight="@dimen/hotel_room_list_container_margin"
-        android:layout_marginBottom="9dp"
         android:animateLayoutChanges="true"
         android:orientation="vertical">
 
@@ -18,10 +18,10 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_gravity="center"
-            android:src="@drawable/cars_fallback"
             android:layout_marginBottom="24dp"
             android:gravity="center"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:src="@drawable/cars_fallback" />
 
         <RelativeLayout
             android:id="@+id/collapsed_container"
@@ -78,7 +78,7 @@
                 android:visibility="gone" />
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/expanded_free_cancellation__text_view"
+                android:id="@+id/expanded_free_cancellation_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/expanded_amenity_text_view"
@@ -105,8 +105,8 @@
                 android:id="@+id/total_price_per_night"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/daily_price_per_night"
                 android:layout_alignParentRight="true"
+                android:layout_below="@+id/daily_price_per_night"
                 android:layout_marginRight="15dp"
                 android:textColor="@color/text_light_gray"
                 android:textSize="12sp" />
@@ -137,8 +137,8 @@
                 android:id="@+id/room_info_header_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Room Information"
                 android:drawableRight="@drawable/ic_expand"
+                android:text="Room Information"
                 android:textColor="@color/text_light_gray"
                 android:textSize="15sp"
                 android:textStyle="bold" />
@@ -148,12 +148,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/room_info_header_text"
-                android:visibility="gone"
                 android:layout_marginBottom="15dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/text_light_gray"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="gone" />
         </RelativeLayout>
     </LinearLayout>
 
