4935. Checkout font tweaks

--- a/project/src/main/res/layout/payment_widget.xml
+++ b/project/src/main/res/layout/payment_widget.xml
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center|left"
                 android:singleLine="true"
+                android:textColor="@color/cars_lx_checkout_button_text_color"
                 android:textSize="16sp"
                 app:textStyle="medium" />
 
@@ -41,8 +42,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center|left"
                 android:singleLine="true"
-                android:text="Expired 11/15"
-                android:textSize="13sp" />
+                android:textColor="@color/cars_lx_checkout_button_text_color"
+                android:textSize="13sp"
+                app:textStyle="normal" />
         </LinearLayout>
 
         <com.expedia.bookings.widget.ContactDetailsCompletenessStatusImageView
