--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -248,6 +248,7 @@
     <color name="cars_tooltip_color">#915B7C</color>
     <color name="cars_tooltip_disabled_color">#9D9D9D</color>
     <color name="cars_actionbar_text_color">#5C5C5C</color>
+    <color name="cars_lx_checkout_button_text_color">#676767</color>
     <color name="cars_invalid_days_calendar">#A9A9A9</color>
     <color name="cars_valid_days_calendar">#3A3A3A</color>
     <color name="cars_checkmark_color">#29a653</color>
