--- a/project/src/main/res/layout/widget_hotel_search_params.xml
+++ b/project/src/main/res/layout/widget_hotel_search_params.xml
@@ -20,10 +20,10 @@
             android:clipToPadding="false"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/location_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="16dp"
                 android:clipChildren="false"
@@ -33,9 +33,10 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/location_image_view"
                     android:layout_width="55dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="1dp"
                     android:src="@drawable/location"
                     android:tint="#FFFFFF" />
@@ -43,19 +44,30 @@
                 <com.expedia.bookings.widget.AlwaysFilterAutoCompleteTextView
                     android:id="@+id/hotel_location"
                     style="@style/CarAutocomplete"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:layout_toEndOf="@id/location_image_view"
                     android:layout_weight="1"
                     android:completionThreshold="1"
                     android:dropDownAnchor="@+id/drop_down_anchor"
                     android:dropDownSelector="#FFFFFF"
                     android:dropDownWidth="fill_parent"
                     android:hint="@string/search_location"
-                    android:textColorHighlight="#12AD9F"
                     android:imeOptions="actionDone"
-                    android:inputType="textNoSuggestions" />
+                    android:inputType="textNoSuggestions"
+                    android:textColorHighlight="#12AD9F" />
 
-            </LinearLayout>
+                <ImageView
+                    android:id="@+id/clear_location_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_alignRight="@id/hotel_location"
+                    android:layout_centerVertical="true"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:src="@drawable/input_x"
+                    android:visibility="gone" />
+            </RelativeLayout>
 
             <View
                 android:id="@+id/drop_down_anchor"
@@ -122,7 +134,7 @@
             android:layout_weight="1"
             android:orientation="vertical"
             android:padding="16dp"
-            android:visibility="gone"/>
+            android:visibility="gone" />
 
         <com.mobiata.android.time.widget.CalendarPicker
             android:id="@+id/calendar"
@@ -136,7 +148,7 @@
             app:calendarDaySelectionFillColor="@android:color/white"
             app:calendarDaysOfWeekColor="@color/hotels_primary_color"
             app:calendarHeaderTextColor="@color/hotels_primary_color"
-            app:calendarToolTipEnabled ="true"
+            app:calendarToolTipEnabled="true"
             app:calendarToolTipBackground="@drawable/toolbar_bg"
             app:calendarToolTipTailDrawable="@drawable/toolbar_arrow"
             app:calendarHeaderTextSize="16dp"
