--- a/project/src/samsung/res/values/donottranslate.xml
+++ b/project/src/samsung/res/values/donottranslate.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <string name="app_name">Samsung</string>
+    <string name="app_name">Expedia</string>
 
     <!-- The merchant name to display to the user for Google Wallet -->
     <string name="merchant_name">Samsung</string>
