--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -329,6 +329,12 @@
         <item name="android:textColor">#696969</item>
     </style>
 
+    <style name="widgetHotelReviewsSummaryText">
+        <item name="android:padding">@dimen/hotel_review_summary_padding_size</item>
+        <item name="android:textColor">@color/hotel_review_summary_rating_color</item>
+        <item name="android:textSize">@dimen/hotel_review_summary_text_size</item>
+    </style>
+
     <style name="widgetHotelNameText">
         <item name="android:textColor">@color/widget_text_color</item>
         <item name="android:textSize">14sp</item>
