s/4739 Material hotel details
- small design polish
- parse and display amenities, fees, and other texts
- unit test to test the parsing
- click listener for pay later message info view
- show unique amenity on the expanded room view
- unit test to test the common value adds list
- unit test to test unique value adds for each room

--- a/project/src/main/res/layout/hotel_room_row.xml
+++ b/project/src/main/res/layout/hotel_room_row.xml
@@ -57,7 +57,7 @@
                 android:layout_below="@+id/room_type_text_view"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="4dp"
-                android:drawableLeft="@drawable/doors"
+                android:drawableLeft="@drawable/room_bed"
                 android:drawablePadding="4dp"
                 android:textColor="@color/text_light_gray"
                 android:textSize="12sp"
@@ -70,9 +70,8 @@
                 android:layout_below="@+id/expanded_bed_type_text_view"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="4dp"
-                android:drawableLeft="@drawable/doors"
+                android:drawableLeft="@drawable/check"
                 android:drawablePadding="4dp"
-                android:text="Includes free wireless internet"
                 android:textColor="@color/text_light_gray"
                 android:textSize="12sp"
                 android:visibility="gone" />
@@ -84,9 +83,8 @@
                 android:layout_below="@+id/expanded_amenity_text_view"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="4dp"
-                android:drawableLeft="@drawable/doors"
+                android:drawableLeft="@drawable/check"
                 android:drawablePadding="4dp"
-                android:text="Free Cancellation"
                 android:textColor="@color/text_light_gray"
                 android:textSize="12sp"
                 android:visibility="gone" />
