--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -1074,14 +1074,15 @@
         <item name="android:layout_weight">1</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:button">@android:color/transparent</item>
-        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingLeft">44dp</item>
+        <item name="android:drawablePadding">8dp</item>
         <item name="android:paddingTop">12dp</item>
         <item name="android:paddingRight">8dp</item>
         <item name="android:paddingBottom">12dp</item>
-        <item name="android:gravity">center</item>
+        <item name="android:gravity">left</item>
         <item name="android:textColor">@color/sliding_group_text</item>
-        <item name="android:textSize">16.85sp</item>
-        <item name="textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="textStyle">normal</item>
     </style>
 
     <!-- Credit Card Edit Text on hotel checkout -->
