--- a/project/src/main/res/layout/widget_hotel_detail_presenter.xml
+++ b/project/src/main/res/layout/widget_hotel_detail_presenter.xml
@@ -12,4 +12,10 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <com.expedia.bookings.widget.PayLaterInfoWidget
+        android:id="@+id/hotel_pay_later_info"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
 </merge>
