--- a/project/src/main/res/layout/widget_special_notice.xml
+++ b/project/src/main/res/layout/widget_special_notice.xml
@@ -3,19 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container"
-        android:background="@android:color/transparent"
         android:layout_marginTop="12dp"
+        android:background="@android:color/transparent"
         android:orientation="vertical">
 
-        <WebView
+        <com.expedia.bookings.widget.TextView
             android:id="@+id/content_description"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="12dp"
-            android:background="@android:color/transparent" />
+            android:layout_margin="12dp" />
 
     </LinearLayout>
 
